--- a/_2_css/index.html
+++ b/_2_css/index.html
@@ -20,7 +20,15 @@
 <!-- internal css inline css den ustundur -->
 
 <br><br>
+<header></header>
 
+<div class="div_float">1.KUTU</div>
+<div class="div_float">2.KUTU</div>
+<div class="div_float">3.KUTU</div>
+<div class="div_float">4.KUTU</div>
+
+
+<img src="../utils/img/uckus.jpg" alt="" srcset="">
 
 
     <p style="color: red; text-align: center; font-size: 32px;">Deneme</p>
