--- a/_2_css/index.html
+++ b/_2_css/index.html
@@ -52,6 +52,13 @@
             Maxime fugiat quas corruptii.</p>
     
 
+            <div class="div_class_responsive">1.KUTU</div>
+            <div class="div_class_responsive">2.KUTU</div>
+            <div class="div_class_responsive">3.KUTU</div>
+            <div class="div_class_responsive">4.KUTU</div>
+            
+
+
             <div class="div_class">1.KUTU</div>
             <div class="div_class">2.KUTU</div>
             <div class="div_class">3.KUTU</div>
