--- a/Homeworks/SignUpAndLogin/login.html
+++ b/Homeworks/SignUpAndLogin/login.html
@@ -43,7 +43,7 @@
                  <tr>
                       <td>
                           <div class="d-flex justify-content-center size">
-                              <button type="submit" class="btn btn-outline-warning w-100 mt-4" style="color: black; border-color: black;">Sign Up</button>
+                              <button type="sub" class="btn btn-outline-warning w-100 mt-4" style="color: black; border-color: black; background-color:#99b8fb">LOG IN</button>
                           </div>
                       </td>
                   </tr>
