--- a/Homeworks/SignUpAndLogin/register.html
+++ b/Homeworks/SignUpAndLogin/register.html
@@ -64,7 +64,7 @@
                  <tr>
                       <td>
                           <div class="d-flex justify-content-center size">
-                              <button type="submit" class="btn btn-outline-warning w-100 mt-4" style="color: black; border-color: black;">Sign Up</button>
+                              <button type="submit" class="btn btn-outline-warning w-100 mt-4" style="color: black; border-color: black; background-color:#99b8fb"">Sign Up</button>
                           </div>
                       </td>
                   </tr>
