--- a/_2_css/index.html
+++ b/_2_css/index.html
@@ -52,7 +52,7 @@
             Maxime fugiat quas corruptii.</p>
     
 
-            <div class="div_class_responsive">1.KUTU</div>
+            <div class="div_class_responsivx    e">1.KUTU</div>
             <div class="div_class_responsive">2.KUTU</div>
             <div class="div_class_responsive">3.KUTU</div>
             <div class="div_class_responsive">4.KUTU</div>
